--- a/index.html
+++ b/index.html
@@ -3,67 +3,88 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>許玉麗的個人履歷</title>
+  <title>個人簡介 - 許玉麗</title>
   <style>
-    body { font-family: 'Noto Sans TC', sans-serif; background: #f5f5f5; margin: 40px; }
-    .card { background: white; border-radius: 10px; padding: 20px; max-width: 800px; margin: auto; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
-    img { width: 100%; border-radius: 10px; margin-top: 15px; }
-    h1 { color: #0078d7; }
-    h2 { color: #333; margin-top: 25px; }
-    ul { list-style-type: none; padding-left: 0; }
-    li { margin-bottom: 8px; }
-    .info { display: flex; flex-wrap: wrap; justify-content: space-between; }
-    .section { margin-top: 15px; }
+    body {
+      font-family: "Microsoft JhengHei", sans-serif;
+      background-color: #f9fafc;
+      margin: 0;
+      padding: 20px;
+      color: #333;
+    }
+    .container {
+      max-width: 550px;
+      margin: auto;
+      background: #fff;
+      padding: 25px;
+      border-radius: 15px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    }
+    h1 {
+      color: #0078D7;
+      text-align: center;
+      margin-bottom: 5px;
+    }
+    img {
+      display: block;
+      width: 120px;
+      height: 120px;
+      border-radius: 10px;
+      margin: 15px auto;
+      object-fit: cover;
+    }
+    .info {
+      margin-top: 15px;
+      line-height: 1.8;
+    }
+    .tag {
+      display: inline-block;
+      background: #E6F0FF;
+      color: #0078D7;
+      padding: 6px 12px;
+      border-radius: 10px;
+      margin: 4px;
+      font-size: 14px;
+    }
+    h2 {
+      border-left: 5px solid #0078D7;
+      padding-left: 10px;
+      color: #0078D7;
+      margin-top: 25px;
+    }
   </style>
 </head>
 <body>
-  <div class="card">
+  <div class="container">
     <h1>許玉麗</h1>
-    <p>亞洲大學 建管系 一年級生（1P班）</p>
-    <p>學號：114011122</p>
-    <p>Email: huangocle.04032006@gmail.com</p>
-    <p>電話：0970-118-595</p>
-    <hr>
-
-    <h2>個人簡介</h2>
-    <p>我是亞洲大學一年級建管系學生（學號114011122）。我喜歡烹飪，因此希望能找到與此相關的工作來學習與培養興趣。</p>
-    <img src="profile_photo.jpg" alt="個人照片">
-
-    <div class="section">
-      <h2>技能</h2>
-      <ul>
-        <li>文書處理 (Word / Excel)</li>
-        <li>HTML / CSS / JavaScript（基礎）</li>
-        <li>烹飪 / 食品製作</li>
-        <li>團隊合作與溝通能力</li>
-      </ul>
+    <img src="profile_photo.jpg" alt="Profile Photo">
+    <div class="info">
+      <p><b>學號：</b>114011122</p>
+      <p><b>學校：</b>亞洲大學</p>
+      <p><b>科系：</b>建管系</p>
+      <p><b>班級：</b>1P</p>
+      <p><b>電話：</b>0970118595</p>
+      <p><b>Email：</b>huangocle.04032006@gmail.com</p>
     </div>
 
-    <div class="section">
-      <h2>語言能力</h2>
-      <ul>
-        <li>越南語（母語）</li>
-        <li>中文（良好）</li>
-      </ul>
+    <h2>自我介紹</h2>
+    <p>我是一名亞洲大學健康管理系一年級的學生（學號 114011122）。我喜歡烹飪，因此希望能找到與此相關的工作，從中學習並培養興趣。</p>
+
+    <h2>興趣</h2>
+    <div>
+      <span class="tag">閱讀</span>
+      <span class="tag">聽音樂</span>
+      <span class="tag">玩遊戲</span>
     </div>
 
-    <div class="section">
-      <h2>興趣</h2>
-      <p>閱讀、聽音樂、玩遊戲、烹飪</p>
+    <h2>語言能力</h2>
+    <div>
+      <span class="tag">越南語</span>
+      <span class="tag">中文</span>
     </div>
 
-    <div class="section">
-      <h2>工作經驗</h2>
-      <ul>
-        <li>全聯 — 門市人員</li>
-        <li>麵店 — 兼職服務員</li>
-      </ul>
-    </div>
-
-    <div class="section">
-      <h2>職涯目標</h2>
-      <p>希望透過實際工作與學習累積更多經驗，培養專業能力，並朝向健康與管理相關領域發展。</p>
-    </div>
+    <h2>工作經驗</h2>
+    <p>曾於全聯及麵店工作。</p>
   </div>
 </body>
 </html>
